# smartcitizen-data

./: .dotfile  .gitignore  .gitmodules  MANIFEST.in  MICS-Analysis-v0.1.ipynb  Makefile  README.md  env.example  environment.txt  environment.yml  environment_full.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  urls.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  python-latest.yml
analysis/: 202102023_elementAIR.ipynb  20210223_elementAIR.ipynb  20210715_nilu-scs-tests.ipynb  20211005-palo-alto.ipynb  240513_battery-test.ipynb  240514_twinair_co2-hcho-1.ipynb  240529-Bern.ipynb  240529-C40.ipynb  240603_TwinAIR-Cabin-CO2-calibration.ipynb  240719_glasgow-2.ipynb
blueprints/: README.md  base.json  csic_station.json  muv_station.json  nilu_lab.json  parrot_soil.json  sc_20_station_iscape.json  sc_21_station_iscape.json  sc_21_station_module.json  sc_21_water.json  sc_air.json  sc_air_api.json  sc_air_enhanced.json  sc_air_file.json  sc_water.json  sc_water_api.json  sck.json  sck_15.json  sck_20.json  sck_21.json  sck_21_co2.json  sck_21_gps.json  sck_21_nilu.json  sck_21_sen5x.json  sck_21_sps30.json
calData/: AlphaSense.json  mics.json
calibrations/: README.md  calibrations.json
connectors/: README.md  connectors.json  nilu.json
data/: README.md
examples/: README.md  advanced_data_load.ipynb  batch_analysis.ipynb  filter_devices_api.ipynb  geo_data.ipynb  load_device_API.ipynb  load_device_from_open_data.ipynb  load_test_data.ipynb  plotting_data.ipynb  test_creation.ipynb  upload_to_zenodo.ipynb  world-map.ipynb
(+606 files in other folders)
