[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scdata"
version = "1.3.2"
description = "A Python package for analysing environmental sensor data"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Fab Lab Barcelona", email = "info@fablabbcn.org" },
  { name = "Oscar Gonzalez", email = "oscar@fablabbcn.org"}
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
]

# Based on the requirements list in the repo
dependencies = [
  "branca~=0.4.0",
  "Flask~=2.2.2",
  "folium~=0.12.1",
  "geopy~=1.21.0",
  "Jinja2~=3.1.2",
  "matplotlib",
  "pandas~=2.2.2",
  "pydantic",
  "PyYAML~=6.0.1",
  "requests",
  "scipy",
  "scikit-learn",
  "seaborn",
  "smartcitizen-connector",
  "termcolor==1.1.0",
  "tqdm~=4.50.2",
  "timezonefinder~=6.1.9",
  "urllib3",
  "boto3",
  "awswrangler"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8"
]

[project.urls]
Documentation = "https://docs.smartcitizen.me/"
Repository = "https://github.com/fablabbcn/smartcitizen-data"